force-app/main/default/objects/Calendar_Invite__c/Calendar_Invite__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Calendar Invite</label>
</CustomObject>