force-app/main/default/objects/Calendar_Invite__c/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <inlineHelpText>The name of the company/organization sending the calendar invites.</inlineHelpText>
    <label>Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>