force-app/main/default/objects/Calendar_Invite__c/fields/Company_Website__c.field-meta.xml
<CustomField>
    <fullName>Company_Website__c</fullName>
    <inlineHelpText>The website of the company/organization sending the calendar invites.</inlineHelpText>
    <label>Company Website</label>
    <type>Url</type>
</CustomField>