force-app/main/default/objects/Calendar_Invite__c/fields/Default_Description__c.field-meta.xml
<CustomField>
    <fullName>Default_Description__c</fullName>
    <defaultValue>&quot;&quot;</defaultValue>
    <description>This is the default email/invite description of the event invite if you decide to disable the &quot;required&quot; attribute of the &quot;Description&quot; field.</description>
    <label>Default Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>