force-app/main/default/objects/Calendar_Invite__c/fields/Default_Email_Template__c.field-meta.xml
<CustomField>
    <fullName>Default_Email_Template__c</fullName>
    <defaultValue>&quot;Calendar Invite&quot;</defaultValue>
    <description>This is the default email/page template of the event invite if you decide to disable the &quot;required&quot; attribute of the &quot;Event Template&quot; field.</description>
    <label>Default Email Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>