force-app/main/default/objects/Calendar_Invite__c/fields/Default_Org_Wide_Sender__c.field-meta.xml
<CustomField>
    <fullName>Default_Org_Wide_Sender__c</fullName>
    <defaultValue>&quot;Default Organizer&quot;</defaultValue>
    <description>This is the default sender of the event invite if you decide to disable the &quot;required&quot; attribute of the &quot;Event Organizer&quot; field.</description>
    <label>Default Org Wide Sender</label>
    <length>255</length>
    <type>Text</type>
</CustomField>