force-app/main/default/objects/Calendar_Invite__c/fields/Default_Subject__c.field-meta.xml
<CustomField>
    <fullName>Default_Subject__c</fullName>
    <defaultValue>&quot;Please RSVP&quot;</defaultValue>
    <description>This is the default email/invite subject of the event invite if you decide to disable the &quot;required&quot; attribute of the &quot;Subject&quot; field.</description>
    <label>Default Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>