force-app/main/default/objects/Calendar_Invite__c/fields/Default_Timezone__c.field-meta.xml
<CustomField>
    <fullName>Default_Timezone__c</fullName>
    <defaultValue>&quot;GMT-0500 Eastern Standard Time (North America And Caribbean) (EST)&quot;</defaultValue>
    <description>If the timezone is left blank on an invite and the &quot;Event Organizer&quot; field is set to an org wide email address this is the timezone used in the initial email. You must select a value from the &quot;Event Invite Timezones&quot; Picklist Value Set.</description>
    <label>Default Timezone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>