force-app/main/default/objects/Calendar_Invite__c/fields/Event_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Event_Record_ID__c</fullName>
    <defaultValue>&quot;0120m0000008dYX&quot;</defaultValue>
    <description>Event Record Type ID of Calendar Invite type Events. Leave blank if all Events are to sent calendar invites.</description>
    <label>Event Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>