force-app/main/default/objects/Calendar_Invite__c/fields/Site_URL__c.field-meta.xml
<CustomField>
    <fullName>Site_URL__c</fullName>
    <defaultValue>&quot;https://3st-invites-developer-edition.na73.force.com/invite&quot;</defaultValue>
    <description>Custom url for hosting calendar invites at branded location. You will need to create a Site in Salesforce that corresponds to the below setting. Leave blank to host from regular Salesforce domain (e.g. na1.salesforce.com/apex/).</description>
    <label>Site URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>